<resources>
    <string name="app_name">RTC-example</string>
    <string name="meeting">Meeting</string>
    <string name="end">End</string>
    <string name="exit">Exit</string>
    <string name="mute">Mute</string>
    <string name="talk">Talk</string>
    <string name="stop_camera">Stop Camera</string>
    <string name="share_content">Share Content</string>
    <string name="chat">Chat</string>
    <string name="participants">Participants</string>
    <string name="more">More</string>
    <string name="video_fusion">Video Fusion</string>
    <string name="join_meeting">Join Room</string>
    <string name="join">Join</string>
    <string name="room_id">Room ID</string>
    <string name="display_name">Display Name</string>
    <string name="meeting_background">Metting Background</string>
    <string name="room_options">Room Options</string>
    <string name="open_microphone">Open Microphone</string>
    <string name="open_camera">Open Camera</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="new_meeting">New Meeting</string>
    <string name="share_link">Share Room Link</string>
</resources>