<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141e30"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_meeting_switch_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_switch_camera"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_meeting_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_meeting_title" />

                <TextView
                    android:id="@+id/tv_meeting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/share_link"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:background="@drawable/shape_bottom_frame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_meeting_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/exit"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_meeting_title"
                    app:layout_constraintEnd_toStartOf="@+id/tv_meeting_end"
                    app:layout_constraintTop_toTopOf="@+id/tv_meeting_title" />

                <TextView
                    android:id="@+id/tv_meeting_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/end"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_meeting_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_meeting_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/footer"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.zeewain.api.example.VideoReportLayout
                        android:id="@+id/videoReportLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:textPaddingStart="0dp"
                        app:textPaddingTop="0dp" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_meeting_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mute"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_mic_on" />

                <TextView
                    android:id="@+id/tv_meeting_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/stop_camera"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_webcam_on" />

                <TextView
                    android:id="@+id/tv_meeting_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/share_content"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_share" />

                <TextView
                    android:id="@+id/tv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="3dp"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:text="@string/chat"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_chat" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_meeting_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_meeting_participants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/participants"
                        android:textColor="@color/white"
                        app:drawableTopCompat="@drawable/ic_people"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_meeting_participants_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        app:layout_constraintStart_toEndOf="@+id/tv_meeting_participants"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="99" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_meeting_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_stats"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="@color/white"
                    android:visibility="gone" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>