<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141e30">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/fusionView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:visibility="gone"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="16dp"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_meeting_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_switch_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_meeting_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="点击复制房间地址"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/shape_bottom_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_meeting_exit"
                android:layout_width="68dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/btn_meeting_end"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_meeting_end"
                android:layout_width="67dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:text="@string/end"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/participants"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_left_frame"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:drawableEndCompat="@drawable/ic_enter"
                app:drawableStartCompat="@drawable/ic_peoples"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_meeting_end"
                tools:text="20000" />

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/iv_meeting_audio"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_mic_on" />

                <ImageView
                    android:id="@+id/iv_meeting_video"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_webcam_on" />

                <ImageView
                    android:id="@+id/iv_meeting_chat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_chat" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_meeting_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_meeting_participants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/participants"
                        android:textColor="@color/white"
                        app:drawableTopCompat="@drawable/ic_people"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_meeting_participants_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        app:layout_constraintStart_toEndOf="@+id/tv_meeting_participants"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/tv_meeting_more"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_stats"
                    android:gravity="center" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rightView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <LinearLayout
            android:id="@+id/iv_left"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:orientation="vertical"
            android:layout_marginTop="55dp"
            android:background="@drawable/shape_left_000_frame"
            app:layout_constraintEnd_toStartOf="@+id/scrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_enter"
                android:layout_marginStart="2dp"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3000000"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_left">

            <com.zeewain.api.example.VideoReportLayout
                android:id="@+id/videoReportLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:textPaddingStart="0dp"
                app:textPaddingTop="5dp" />

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
